--- a/Birthday.html
+++ b/Birthday.html
@@ -11,5 +11,5 @@
     <li>Birthday cards</li>
 </ul>    
 <h4>The Place To Go</h4>
-<img src="https://image-tc.galaxy.tf/wijpeg-2w7ueb8np3077348kg8u539fy/hr-dsc-5646.jpg?width=350&height=300">
+<a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYTM5ECkqknKPsEiOqae-zt3vLaKWw8x9KQg&s">Google map link</a>
 
